[tool.poetry]
name = "nutriage-plus"
version = "0.1.0"
description = "A nutrition app for 50+ age group"
authors = ["Ossi <office.vizhion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
replit = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"